Finished Desctop Version

--- a/css/common.css
+++ b/css/common.css
@@ -2650,6 +2650,8 @@ button.cj-btn:focus {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 100%;
 }
 
 .core-value-image img {
