--- a/css/common.css
+++ b/css/common.css
@@ -175,6 +175,7 @@ table {
     height: 18px;
     line-height: 20px;
     text-align: center;
+    font-weight: 700;
 }
 
 /*
@@ -1347,7 +1348,7 @@ table {
 }
 
 .about-us-content p {
-    font-size: 16px;
+    font-size: 18px;
     line-height: 26px;
 }
 
@@ -1527,7 +1528,7 @@ p.partners-number-medium {
 
 .project-item h3 {
     /*font-family: 'Helvetica Neue Cyr Bold';*/
-    font-size: 17px;
+    font-size: 20px;
     line-height: 80px;
     margin-bottom: 0;
     text-align: center;
@@ -1648,7 +1649,7 @@ p.partners-number-medium {
     padding: 5px 7px;
     /*font-family: 'Helvetica Neue Cyr Bold';*/
     border-radius: 25px;
-    font-size: 13px;
+    font-size: 16px;
     text-align: center;
 }
 
@@ -1657,12 +1658,12 @@ p.partners-number-medium {
     line-height: 29px;
     text-align: start;
     /*font-family: 'Helvetica Neue Cyr Bold';*/
-    font-size: 15px;
+    font-size: 18px;
     width: 60%;
 }
 
 .news-title {
-    font-size: 17px;
+    font-size: 18px;
     line-height: 36px;
     padding: 0;
     margin-bottom: 0;
@@ -1695,11 +1696,11 @@ p.partners-number-medium {
 
         display: flex;
         align-items: center;
-        font-size: 15px;
+        font-size: 18px;
     }
 
     .news-category-label span {
-        font-size: 13px;
+        font-size: 16px;
     }
 
     .news-title {
@@ -1979,6 +1980,7 @@ p.partners-number-medium {
     text-align: center;
     width: 100%;
     margin-top: 60px;
+    font-size: 18px;
 }
 
 
@@ -2015,7 +2017,7 @@ p.partners-number-medium {
 
 .address-item p {
     padding: 5px 0;
-    font-size: 16px;
+    font-size: 18px;
 }
 
 .address-item .address-line {
@@ -2214,7 +2216,7 @@ button.cj-btn:focus {
 .about-description article {
     margin-right: 20px;
     text-align: justify;
-    font-size: 17px;
+    font-size: 18px;
     /*font-family: 'HELVETICAMEDIUM';*/
 }
 
@@ -2224,7 +2226,7 @@ button.cj-btn:focus {
 
 .about-description article {
     line-height: 26px;
-    font-size: 16px;
+    font-size: 18px;
 }
 
 .about-description-text p {
@@ -2305,7 +2307,7 @@ button.cj-btn:focus {
     background-color: #000;
     color: #fff;
     /*font-family: 'HELVETICAMEDIUM', sans-serif;*/
-    font-size: 14px;
+    font-size: 16px;
     line-height: 20px;
     padding: 5%;
     text-align: left;
@@ -2338,6 +2340,7 @@ button.cj-btn:focus {
     line-height: 26px;
     text-align: left;
     padding-right: 100px;
+    font-size: 18px;
 }
 
 .services-description-list {
@@ -2357,12 +2360,13 @@ button.cj-btn:focus {
 
 .services-description-list p {
     padding: 10px 0;
+    font-size: 20px;
 }
 
 .services-description-list ol {
     list-style: decimal;
     padding-left: 20px;
-    font-size: 17px;
+    font-size: 19px;
 }
 
 .services-steps .cj-container {
@@ -2493,7 +2497,7 @@ button.cj-btn:focus {
     /*font-family: sans-serif;*/
     color: #444;
     line-height: 24px;
-    font-size: 15px;
+    font-size: 17px;
     width: 70%;
     margin: auto;
 }
@@ -2509,7 +2513,7 @@ button.cj-btn:focus {
     /*font-family: sans-serif;*/
     color: #444;
     line-height: 24px;
-    font-size: 15px;
+    font-size: 17px;
 }
 
 
@@ -2533,6 +2537,7 @@ button.cj-btn:focus {
     padding: 0 5%;
     line-height: 26px;
     text-align: center;
+    font-size: 18px;
 }
 
 .partners-page-picture-separator .cj-container {
@@ -2573,7 +2578,10 @@ button.cj-btn:focus {
 
 .partners-page-wanted-text-wrapper {
     padding: 60px 5% 0;
+    font-size: 18px;
+    text-align: center;
 }
+
 
 
 
@@ -2592,6 +2600,7 @@ button.cj-btn:focus {
 
 .career-page-about-wrapper {
     padding: 60px 0 0 5%;
+    font-size: 18px;
 }
 
 .career-page-about-wrapper img {
@@ -2618,7 +2627,7 @@ button.cj-btn:focus {
 }
 
 .position-title h3 {
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 700;
     padding-bottom: 10px;
 }
@@ -2626,9 +2635,13 @@ button.cj-btn:focus {
 .position-location,
 .position-date,
 .position-department {
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 700;
     padding-bottom: 15px;
+}
+
+.position-description {
+    font-size: 17px;
 }
 
 .career-page-core-values .cj-container {
@@ -2674,4 +2687,5 @@ button.cj-btn:focus {
 
 .culture-description-wrapper {
     padding: 60px 5%; 
+    font-size: 18px;
 }
