Finished Desctop Version

--- a/css/common.css
+++ b/css/common.css
@@ -2689,3 +2689,8 @@ button.cj-btn:focus {
     padding: 60px 5%; 
     font-size: 18px;
 }
+
+/*
+============================================================================================
+*/
+
